# private-test-cpp-project

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.build  Doxyfile  LICENSE  README.md  cliff.toml  docker-build.sh  docker-entrypoint.sh  sbom.cdx.json  sbom.spdx
.github/workflows/: ci.yml  release.yml  sbom.yml
.gitlab/: merge_request_template.md
cli/: CMakeLists.txt
cli/src/: main.cpp
common/include/: logger.hpp
docs/: gitlab-migration-guide.md
docs/00_project/: learning-guide.md  wbs.xlsx
docs/01_requirements/: change-log.csv  requirements-spec.md
docs/02_basic-design/: system-architecture.drawio  system-architecture.md
docs/03_detailed-design/: driver-design.md
docs/06_test/: test-plan.md
docs/06_test/acceptance/spec/: acceptance-spec.xlsx
docs/06_test/integration/spec/: integration-spec.xlsx
docs/06_test/unit/spec/: driver-unit-spec.xlsx  lib-unit-spec.xlsx
docs/07_delivery/: delivery-checklist.xlsx  sbom-guide.md
docs/07_delivery/release-notes/: v1.1.0.md
docs/adr/: 0001-optional-independent-components.md
docs/deliverables/00_project/meeting-minutes/: 2025-01-10.md
docs/deliverables/01_requirements/: requirements-spec.md
docs/deliverables/02_basic-design/: system-architecture.drawio  system-architecture.md
docs/deliverables/03_detailed-design/: kernel-driver-design.md  lib-design.md  libsensor-design.md
docs/deliverables/04_api-spec/: libdevice-api.md  libsensor-api.md  spi-driver-api.md
docs/deliverables/05_interface-spec/: adxl345-register-map.md  spi-hardware-if.md
docs/deliverables/06_test/: test-plan.md
docs/deliverables/07_delivery/release-notes/: v1.1.0.md
docs/guides/: c-to-cpp-stepping-stones.md  gpio-interrupts-epoll.md  i2c-and-ads1115.md  learning-guide.md  sbom-guide.md
docs/guides/tooling/: build-guide.md  cmake-guide.md  commit-conventions-guide.md  coverage-guide.md  cpp-patterns-guide.md  docker-guide.md  doxygen-guide.md  gtest-guide.md  kernel-module-guide.md  sanitizers-guide.md  static-analysis-guide.md
docs/reviews/: code-ci-review-2026-05.md
docs/wiki/: release-matrix.md
driver/: CMakeLists.txt
driver/include/: ispi_driver.hpp  kernel_spi_driver.hpp  logger.hpp  spi_driver.hpp  version.hpp.in
driver/src/: kernel_spi_driver.cpp  spi_driver.cpp
examples/: CMakeLists.txt  ads1115_alert_demo.cpp
gpio/: CMakeLists.txt
gpio/include/: gpio_line.hpp
gpio/src/: gpio_line.cpp
i2c-hal/: CMakeLists.txt
i2c-hal/include/: i2c_driver.hpp  ii2c_driver.hpp
i2c-hal/src/: i2c_driver.cpp
kernel/: Makefile  my_spi_driver.c
kernel/include/: my_spi_dev.h
lib/: CMakeLists.txt
lib/include/: device.hpp
lib/src/: device.cpp
libadxl345/: CMakeLists.txt
libadxl345/include/: adxl345.hpp  adxl345_reg.hpp
libadxl345/src/: adxl345.cpp
libsensor/: CMakeLists.txt
libsensor/include/: ads1115.hpp  sensor.hpp
libsensor/src/: ads1115.cpp  device.cpp  sensor.cpp
spi-hal/: CMakeLists.txt
spi-hal/include/: ispi_driver.hpp  logger.hpp  version.hpp.in
spi-hal/src/: kernel_spi_driver.cpp  spi_driver.cpp
tests/integration/: CMakeLists.txt  test-cases.md  test_mcp3008.cpp  test_spi_loopback.cpp
tests/mocks/: mock_i2c_driver.hpp  mock_spi_driver.hpp
tests/unit/driver/: CMakeLists.txt  test_kernel_spi_driver.cpp  test_spi_driver.cpp
tests/unit/gpio/: CMakeLists.txt  test_gpio_line.cpp
tests/unit/i2c-hal/: CMakeLists.txt  test_i2c_driver.cpp
tests/unit/lib/: CMakeLists.txt  test_device.cpp
tests/unit/libadxl345/: CMakeLists.txt  test-cases.md  test_adxl345.cpp
tests/unit/libsensor/: CMakeLists.txt  test-cases.md  test_ads1115.cpp  test_device.cpp  test_sensor.cpp
tests/unit/spi-hal/: CMakeLists.txt  test-cases.md  test_kernel_spi_driver.cpp  test_spi_driver.cpp
tools/: gen_docs.py  generate-sbom.py  generate-sbom.sh  sbom-metadata.json
